--- a/app/src/main/res/layout/fragment_incident_list.xml
+++ b/app/src/main/res/layout/fragment_incident_list.xml
@@ -11,13 +11,13 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/filterChipGroup"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:paddingTop="16dp"
             android:paddingBottom="8dp"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
@@ -27,10 +27,13 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="All"
-                app:chipCornerRadius="12dp"
-                app:chipMinHeight="36dp"
-                app:chipStartPadding="14dp"
-                app:chipEndPadding="14dp"
+                app:chipIcon="@drawable/ic_check_circle"
+                app:chipIconTint="@color/primary"
+                app:chipIconVisible="true"
+                app:chipCornerRadius="16dp"
+                app:chipMinHeight="40dp"
+                app:chipStartPadding="16dp"
+                app:chipEndPadding="16dp"
                 app:checkedIconVisible="false"
                 app:chipBackgroundColor="@color/chip_selector"
                 android:textColor="@color/chip_text_selector"
@@ -41,27 +44,54 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Low"
+                app:chipIcon="@drawable/ic_alert_low"
+                app:chipIconTint="@color/severity_low"
+                app:chipIconVisible="true"
+                app:chipCornerRadius="16dp"
+                app:chipMinHeight="40dp"
+                app:chipStartPadding="16dp"
+                app:chipEndPadding="16dp"
+                app:checkedIconVisible="false"
                 app:chipBackgroundColor="@color/chip_selector"
                 android:textColor="@color/chip_text_selector"
-                android:text="Low" />
+                app:rippleColor="@color/severity_low" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chipMedium"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Medium"
+                app:chipIcon="@drawable/ic_warning"
+                app:chipIconTint="@color/severity_medium"
+                app:chipIconVisible="true"
+                app:chipCornerRadius="16dp"
+                app:chipMinHeight="40dp"
+                app:chipStartPadding="16dp"
+                app:chipEndPadding="16dp"
+                app:checkedIconVisible="false"
                 app:chipBackgroundColor="@color/chip_selector"
                 android:textColor="@color/chip_text_selector"
-                android:text="Medium" />
+                app:rippleColor="@color/severity_medium" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chipHigh"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="High"
+                app:chipIcon="@drawable/ic_high_alert"
+                app:chipIconTint="@color/severity_high"
+                app:chipIconVisible="true"
+                app:chipCornerRadius="16dp"
+                app:chipMinHeight="40dp"
+                app:chipStartPadding="16dp"
+                app:chipEndPadding="16dp"
+                app:checkedIconVisible="false"
                 app:chipBackgroundColor="@color/chip_selector"
                 android:textColor="@color/chip_text_selector"
-                android:text="High" />
+                app:rippleColor="@color/severity_high" />
 
         </com.google.android.material.chip.ChipGroup>
 
