--- a/app/src/main/res/layout/fragment_incident_list.xml
+++ b/app/src/main/res/layout/fragment_incident_list.xml
@@ -11,10 +11,11 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/filterChipGroup"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="16dp"
             android:paddingBottom="8dp"
+            android:layout_marginHorizontal="3dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,12 +29,12 @@
                 android:checked="true"
                 android:text="All"
                 app:chipIcon="@drawable/ic_check_circle"
-                app:chipIconTint="@color/primary"
+                app:chipIconTint="@color/secondary"
                 app:chipIconVisible="true"
                 app:chipCornerRadius="16dp"
                 app:chipMinHeight="40dp"
-                app:chipStartPadding="16dp"
-                app:chipEndPadding="16dp"
+                app:chipStartPadding="8dp"
+                app:chipEndPadding="6dp"
                 app:checkedIconVisible="false"
                 app:chipBackgroundColor="@color/chip_selector"
                 android:textColor="@color/chip_text_selector"
@@ -50,8 +51,8 @@
                 app:chipIconVisible="true"
                 app:chipCornerRadius="16dp"
                 app:chipMinHeight="40dp"
-                app:chipStartPadding="16dp"
-                app:chipEndPadding="16dp"
+                app:chipStartPadding="8dp"
+                app:chipEndPadding="6dp"
                 app:checkedIconVisible="false"
                 app:chipBackgroundColor="@color/chip_selector"
                 android:textColor="@color/chip_text_selector"
@@ -68,8 +69,8 @@
                 app:chipIconVisible="true"
                 app:chipCornerRadius="16dp"
                 app:chipMinHeight="40dp"
-                app:chipStartPadding="16dp"
-                app:chipEndPadding="16dp"
+                app:chipStartPadding="8dp"
+                app:chipEndPadding="6dp"
                 app:checkedIconVisible="false"
                 app:chipBackgroundColor="@color/chip_selector"
                 android:textColor="@color/chip_text_selector"
@@ -86,8 +87,8 @@
                 app:chipIconVisible="true"
                 app:chipCornerRadius="16dp"
                 app:chipMinHeight="40dp"
-                app:chipStartPadding="16dp"
-                app:chipEndPadding="16dp"
+                app:chipStartPadding="8dp"
+                app:chipEndPadding="6dp"
                 app:checkedIconVisible="false"
                 app:chipBackgroundColor="@color/chip_selector"
                 android:textColor="@color/chip_text_selector"
